--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -10,8 +10,8 @@
     justify-content: center;
 }
 
-.profile {
-    padding-top: 4rem;
+.profile-p {
+    padding-top: 2rem;
     padding-bottom: 2rem;
 }
 
