--- a/programs/templates/programs/my_programs.html
+++ b/programs/templates/programs/my_programs.html
@@ -10,21 +10,21 @@
         </div>
         
         {% if orders %}
+        <div class="row">
             {% for order in orders %}
-            <div class="row">
-                <div class="col-lg-4" style="padding-bottom: 1rem;">
-                    <div class="card h-100" style="width: 100%;">
-                        <img src="{{ order.program_id.image.url }}" class="card-img-top" alt="{{ order.program_id.name }}">
-                        <div class="card-body">
-                          <h5 class="card-title">{{ order.program_id.name }}</h5>
-                          <p class="card-text">{{ order.program_id.insight }}</p>
-                          <p class="card-text">Paid</p>
-                          <a href="{% url 'program_info' order.program_id.id %}" class="btn btn-dark">Go to program</a>
-                        </div>
-                      </div>
+            <div class="col-lg-4 col-md-6" style="padding-bottom: 1rem;">
+                <div class="card h-100" style="width: 100%;">
+                    <img src="{{ order.program_id.image.url }}" class="card-img-top" alt="{{ order.program_id.name }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ order.program_id.name }}</h5>
+                        <p class="card-text">{{ order.program_id.insight }}</p>
+                        <p class="card-text">Paid</p>
+                        <a href="{% url 'program_info' order.program_id.id %}" class="btn btn-dark">Go to program</a>
+                    </div>
                 </div>
             </div>
             {% endfor %}
+        </div>
         {% else %}
         <div class="row justify-content-center">
             <div class="col-lg-6 col-sm-12 text-center programs">
